# AdventOfCode

./: .gitignore  README.md  README.md.bak  all.ts  bun.lockb  generate.ts  package-lock.json  package.json  test.ts  types.ts  util.ts
2019/: index.ts
2019/day2/: part1  part2
2019/day3/: part1  part2  part2.rs
2019/day4/: part1.py  part1.rs
2019/day5/part1/: opcodes.txt
2019/day6/src/: main.rs
2019/python/: list.ts
2019/python/01/: 1.py  2.py
2019/python/04/: 2.py
2019/rust/: .gitignore  list.ts
2019/rust/02/: 1.rs
2019/rust/03/: 1.rs
2019/rust/day2/: part2.rs
2019/rust/day6/: Cargo.toml
2020/: .eslintrc.js  index.ts
2020/day1/: part1.ts  part2.ts
2020/day10/: part2.ts
2020/day2/: part1.ts
2020/day3/: part1.ts  part2.ts
2020/day4/: part1.ts  part2.ts
2020/day5/: part1.ts  part2.ts
2020/day6/: part1.ts
2020/day7/: part1.ts  part2.ts
2020/day8/: part1.ts  part2.ts
2020/typescript/: list.ts  package.json  run.sh
2020/typescript/01/: 1.ts  2.ts
2021/: AdventOfCode2021Haskell.cabal  package.yaml
2021/app/: Main.hs
2021/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day8.hs
2022/: AdventOfCode2021Haskell.cabal  index.ts  package.yaml
2022/app/: Main.hs
2022/haskell/: AdventOfCode2021Haskell.cabal  ChangeLog.md  README.md  list.ts  package.yaml  run.sh  stack.yaml
2022/src/: Day1.hs  Day2.hs  Day4.hs  Day5.hs
2023/: index.ts
2023/haskell/day7/: day7.cabal  stack.yaml
2023/haskell/day7/src/: part1.hs  part2.hs
2023/rust/: list.ts
2023/typescript/: bun.lockb
2024/: index.ts
2024/data/: 15.in.1
(+119 files in other folders)
