cabal-version:       2.2

name:                day7
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/day7#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple

executable part1
  hs-source-dirs:      src
  main-is:             part1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable part2
  hs-source-dirs:      src
  main-is:             part2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
